# agent-NL2SQL-strands

./: .env  .env.example  .gitignore  Dockerfile.lambda  README.md  lambda_handler.py  main.py  pyproject.toml
.github/workflows/: build-deploy-lambda.yml  terraform.yml
app/: __init__.py
app/agents/: base_agent.py  nl2sql_agent.py
app/api/: models.py  routes.py
app/config/: database.py  logger.py  settings.py
app/services/: agent_context.py  response_formatter.py  schema_loader.py  sql_guardrails.py  sql_validator.py  token_counter.py  toon_optimizer.py
app/tools/: get_schema.py  postgres.py
docs/: AWS_DEPLOYMENT.md  PRODUCTION_ROADMAP.md  REACT_IMPLEMENTATION_SUMMARY.md  REACT_INTEGRATION.md  TOKEN_OPTIMIZATION.md
scripts/: aws-setup.sh
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
test/: test_consistency.py  test_fix_verification.py  test_hallucination.py  test_performance.py  test_react_endpoint.py
tests/: conftest.py  test_agent_query_details.py  test_last_client.py
