[project]
name = "nl2sql-agent"
version = "0.1.0"
description = "Agent with Strands and PostgreSQL integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "strands-agents[gemini]>=0.1.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "strands-agents-tools>=0.2.16",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.32.5",
    "pytest>=9.0.1",
    "mangum>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
